--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @agent.name %></h1>
 <p>Rating: <%= @agent.review_rating %></p>
 <p>Licensed Realtor?: <%= @agent.licensed_realtor %></p>
+<p>Number of Houses Listed: <%= @houses.count %></p>
 <p><small>created: <%= @agent.created_at %>, updated: <%= @agent.updated_at %></small></p>
