Complete User Story 8 & 9. Add links to top of each view and featur test links

--- a/app/views/agent_houses/index.html.erb
+++ b/app/views/agent_houses/index.html.erb
@@ -1,3 +1,4 @@
+<h3><%= link_to 'Houses Index', '/houses' %>   <%= link_to 'Agents Index' , '/agents' %></h3>
 <h1>Houses listed by <%= @agent.name %>:</h1>
 <% @houses.each do |house| %>
   <p><h3><%= house.address %></h3></p>
