--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -1,3 +1,4 @@
+<h3><%= link_to 'Houses Index', '/houses' %>   <%= link_to 'Agents Index' , '/agents' %></h3>
 <h1><%= @agent.name %></h1>
 <p>Rating: <%= @agent.review_rating %></p>
 <p>Licensed Realtor?: <%= @agent.licensed_realtor %></p>
