--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,3 +1,5 @@
+<h3><%= link_to 'Houses Index', '/houses' %>   <%= link_to 'Agents Index' , '/agents' %></h3>
+
 <h1><%= @houses.address %></h1>
 <p>Price: <%= @houses.price %></p>
 <p>On the market?: <%= @houses.for_sale %></p>
