--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -1,3 +1,5 @@
+<h3><%= link_to 'Houses Index', '/houses' %>   <%= link_to 'Agents Index' , '/agents' %></h3>
+
 <h1>Real Estate Agents</h1>
 
 <% @agents.each do |agent| %>
