--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,3 +1,5 @@
+<h3><%= link_to 'Houses Index', '/houses' %>   <%= link_to 'Agents Index' , '/agents' %></h3>
+
 <h1>Houses</h1>
 
 <% @houses.each do |house| %>
