--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -1,6 +1,8 @@
 <h3><%= link_to 'Houses Index', '/houses' %>   <%= link_to 'Agents Index' , '/agents' %></h3>
+
 <h1><%= @agent.name %></h1>
 <p>Rating: <%= @agent.review_rating %></p>
 <p>Licensed Realtor?: <%= @agent.licensed_realtor %></p>
 <p>Number of Houses Listed: <%= @houses.count %></p>
+<p><%= link_to 'View Houses For Sale', "/agents/#{@agent.id}/houses" %></p>
 <p><small>created: <%= @agent.created_at %>, updated: <%= @agent.updated_at %></small></p>
