--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -3,5 +3,5 @@
 <h1>Real Estate Agents</h1>
 
 <% @agents.each do |agent| %>
-  <p><%= agent.name %></p>
+  <p><%= link_to "#{agent.name}", "/agents/#{agent.id}" %><small> created: <%= agent.created_at %></small></p>
 <% end %>
