--- a/app/views/agent_houses/index.html.erb
+++ b/app/views/agent_houses/index.html.erb
@@ -6,3 +6,5 @@
   <p>On the Market?: <%= house.for_sale %></p>
   <p><small>created: <%= house.created_at %>, updated: <%= house.updated_at %></small></p>
 <% end %>
+
+<p><%= link_to 'Add New House to Agent', "/agents/#{@agent.id}/houses/new" %></p>
