--- a/app/views/agent_houses/index.html.erb
+++ b/app/views/agent_houses/index.html.erb
@@ -4,6 +4,7 @@
   <p><h3 class='house-addy'><%= link_to "#{house.address}", "/houses/#{house.id}" %></h3></p>
   <p>Price: $<%= house.price %></p>
   <p>On the Market?: <%= house.for_sale %></p>
+  <p><small><%= link_to "Edit House Info", "/houses/#{house.id}/edit" %></small></p>
   <p><small>created: <%= house.created_at %>, updated: <%= house.updated_at %></small></p>
 <% end %>
 <p><%= link_to 'Sort Alphabetically', "/agents/#{@agent.id}/houses?sort=alpha" %></p>
