--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -3,9 +3,8 @@
 <h1>Real Estate Agents</h1>
 
 <% @agents.each do |agent| %>
-  <p class='agent-name'><%= link_to "#{agent.name}", "/agents/#{agent.id}" %>
-    <small><%= link_to 'Edit Agent', "/agents/#{agent.id}/edit" %>
-    </small></p>
+  <p><h3><%= link_to "#{agent.name}", "/agents/#{agent.id}" %></h3></p>
+  <p><small><%= link_to 'Edit Agent', "/agents/#{agent.id}/edit" %></small></p>
   <p><small> created: <%= agent.created_at %></small></p>
 <% end %>
 
