--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -6,4 +6,7 @@
 <p>Listed by: <%= @house.agent.name %></p>
 <p><small>created: <%= @house.created_at %>, updated: <%= @house.updated_at %></small></p>
 
-<p><%= link_to 'Update House Details', "/houses/#{@house.id}/edit" %></p>
+<p>
+  <%= link_to 'Update House Details', "/houses/#{@house.id}/edit" %>
+  <%= link_to 'Delete House', "/houses/#{@house.id}", method: :delete %>
+</p>
