--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -5,6 +5,7 @@
 <% @agents.each do |agent| %>
   <p><h3><%= link_to "#{agent.name}", "/agents/#{agent.id}" %></h3></p>
   <p><small><%= link_to 'Edit Agent', "/agents/#{agent.id}/edit" %></small></p>
+  <p><small>  <%= link_to 'Delete Agent', "/agents/#{agent.id}", method: :delete %></small></p>
   <p><small> created: <%= agent.created_at %></small></p>
 <% end %>
 
